force-app/main/default/objects/Pixel__c/Pixel__c.object-meta.xml
<CustomObject>
    <label>Pixel</label>
    <nameField>
        <displayFormat>PIXEL-{00000000}</displayFormat>
        <label>Pixel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pixels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>