force-app/main/default/objects/Pixel__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Color</label>
    <referenceTo>Color__c</referenceTo>
    <relationshipLabel>Pixels</relationshipLabel>
    <relationshipName>Pixels</relationshipName>
    <type>Lookup</type>
</CustomField>