force-app/main/default/objects/Pixel__c/fields/ColorValue__c.field-meta.xml
<CustomField>
    <fullName>ColorValue__c</fullName>
    <label>Color Value</label>
    <length>10</length>
    <type>Text</type>
</CustomField>