force-app/main/default/objects/Pixel__c/fields/InteractionId__c.field-meta.xml
<CustomField>
    <fullName>InteractionId__c</fullName>
    <label>Interaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>