force-app/main/default/objects/Pixel__c/fields/X__c.field-meta.xml
<CustomField>
    <fullName>X__c</fullName>
    <label>X</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>