force-app/main/default/objects/Pixel__c/fields/Y__c.field-meta.xml
<CustomField>
    <fullName>Y__c</fullName>
    <label>Y</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>